# pyproject.toml
[project]
name = "feed-aggregator-backend"
version = "0.1.0"
description = "Simple RSS Feed Reader"
authors = [
    { name = "Adwait", email = "adwaitkadam1609@gmail.com" }
]


license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "feedparser==6.0.10",
    "pydantic-settings==2.0.3",
    "python-multipart==0.0.6",
    "loguru==0.7.2",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
    "ruff",
    "pre-commit",
    "ipykernel",
    "mypy",
    "types-requests",
    "types-beautifulsoup4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "database", "jobs", "models", "processors", "utils"]

